
[metadata]
name = executor
version = 0.0.1
summary = Automatic test platform
author = fucker-tester
author_email = 498357324@qq.com
home-page = https://github.com/fucker-tester/executor.git
classifier =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7.4

[files]
packages =
    executor

;[entry_points]
;console_scripts =